Changelog.md now instead of inside the Readme. Also fixed double border issue with sections. Thanks @AlexandruDoda

--- a/ReduxCore/inc/fields/section/field_section.less
+++ b/ReduxCore/inc/fields/section/field_section.less
@@ -9,4 +9,11 @@
     h3 {
         margin-top: 10px;
     }
+    .form-table-section-indented > tbody > tr:first-child { 
+        display: none; 
+    }
+    .form-table-section-indented > tbody > tr:nth-last-child(2) { 
+        border-bottom: 0;
+    }
 }
+
